[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["LeeYongBeen <yongkong9876@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
